--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "nextra": "^2.13.2",
+    "nextra-theme-docs": "^2.13.2",
     "pnpm": "^8.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
