--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nextra-theme-docs": "^2.13.2",
     "pnpm": "^8.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
